--- a/assets/pizda.css
+++ b/assets/pizda.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
 }
+html 
+{
+    scroll-behavior: smooth;
+}
 :root
 {
     --text-color: rgb(130, 130, 130);
@@ -17,47 +21,46 @@
 .header
 {
    width: 100%;
-   height: 40px;
+   height: 50px;
    background: rgba(0,0,0,0.3);
-   display: flex;
-   justify-content: space-between;
    position: fixed;
    top: 0;
+   z-index: 1;
+
+   display: flex;
+   justify-content: space-between;
 
    user-select: none;
 }
 .header .nav 
 {
+    display: inline-block;
     display: flex;
+    align-items: center;
+    height: 50px;
 }
 /* logo */
-.header .nav h1 
+.header h1 
 {
-    width: 80px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
+    line-height: 50px;
 
     font-size: 35px;
     color: #F1C40F;
     margin: 0 20px;
 }
 /* Nav */
-.header .nav a 
+.header .nav li 
 {
-    margin: 0 5px;
+    display: inline-block;
+    list-style-type: none;
 }
 .header .nav a 
 {
+    padding: 0 10px;
     display: block;
-    width: 100px;
-    height: 40px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    font-size: 18px;
+    line-height: 50px;
     color: #ccc;
     text-decoration: none;
 
@@ -67,28 +70,12 @@
 {
     color: orange;
 }
-/* Subnav */
-.header .nav .subnav-content a 
-{
-    display: flex;
-    justify-content: flex-start;
-    width: 110px;
-    height: 40px;
-    color: #444;
-}
-.header .nav .subnav-content a:hover 
-{
-    background: rgba(220, 220, 220, 0.5);
-}
-.header .nav .subnav .subnav-content 
-{
-    display: none;
-}
-.header .nav .subnav:hover .subnav-content 
-{
-    display: block;
-}
+
 /* Log in / sign in */
+.account 
+{
+    float: right;
+}
 .account a 
 {
     color: #ccc;
@@ -96,7 +83,7 @@
 
     display: block;
     width: 80px;
-    height: 40px;
+    height: 50px;
 
     display: flex;
     justify-content: center;
@@ -113,22 +100,27 @@
 .content 
 {
     background: #222;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+}
+.content-section 
+{
+    width: 800px;
+    max-width: 100%;
+    padding: 50px 0;
+    margin: 0 auto;
 }
 .content .home 
 {
     width: 100%;
     height: 100vh;
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     background-image: url(https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
     background-size: 100%;
     background-repeat: no-repeat;
+
 }
 .content .home .home-text 
 {
@@ -144,12 +136,12 @@
 .content .home .home-text p
 {
     color: rgb(170, 170, 170);
+    text-align: center;
 }
 
 /* About content */
 .about 
 {
-    width: 100%;
     background: #222;
     display: flex;
     flex-direction: column;
@@ -158,142 +150,134 @@
 /* About */
 .about .about_us
 {
-    margin: 20px 0 0 0;
-    width: 50%;
+    text-align: justify;
 }
 .about .about_us h1 
 {
     color: #F1C40F;
-    margin: 10px 0;
+    margin: 15px 0;
+    text-align: center;
 }
 .about .about_us p 
 {
-    margin: 0 0 0 20px;
     color: rgb(130, 130, 130);
+    font-size: 18px;
+}
+
+.about-content h3
+{
+    color: #F1C40F;
+    margin: 30px 0;
 }
 /* service */
 .service 
 {
-    width: 50%;
-    margin: 20px 0 0 0;
-}
-.service h3 
-{
-    color: #F1C40F;
-    margin: 10px 0;
+    width: 100%;
+
 }
 .service .service-list
 {
-    width: 350px;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 0 0 40px;
+    overflow: hidden;
 }
 .service .service-list .column
 {
-
+    float: left;
+    margin-right: 20px;
 }
 .service .service-list i 
 {
     color: #F1C40F;
     font-size: 17px;
-    margin: 0 5px;
+    margin: 0 15px;
 }
 .service .service-list p 
 {
     display: inline;
-    color: rgb(130, 130, 130)
+    color: rgb(130, 130, 130);
+    font-size: 18px;
 }
 /* Chef */
 .chef 
 {
-    width: 50%;
-    margin: 20px 0 0 0;
+    width: 100%;
 }
-.chef h3 
+.chef .chef-list
 {
-    color: #F1C40F;
-    margin: 10px 0;
+    display: flex;
+    justify-content: space-evenly;
 }
+
 .chef .chef-list .card 
 {
-    width: 320px;
-    height: 80px;
+    width: 150px;
+    padding: 40px 20px;
     border: 3px #444 solid;
     border-radius: 20px;
 
-    margin: 20px 0 20px 40px;
     display: flex;
-    /* justify-content: space-evenly; */
+    flex-direction: column;
     align-items: center;
     color: #F4D03F;
     
     transition: 0.5s;
 }
+
 .chef .chef-list .card:hover 
 {
     border: 3px solid #fff;
+    cursor: pointer;
 }
 .chef .chef-list .card i
 {
+    padding-bottom: 10px;
     font-size: 40px;
     margin: 0 30px;
 }
 .chef .chef-list .card p 
 {
-    color:rgb(170, 170, 170)
+    color:rgb(170, 170, 170);
+    font-size: 18px;
 }
 /* Food using */
 .food 
 {
-    width: 50%;
-    margin: 20px 0 0 0;
-}
-.food h3 
-{
-    color: #F1C40F;
-    margin: 10px 0;
-}
-.food .food-content
-{
-    margin: 0 0 0 20px;
+    width: 100%;
 }
 .food .food-content p 
 {
-    width: 500px;
+    width: 100%;
+    text-align: justify;
     color: rgb(170, 170, 170);
+    font-size: 18px;
 }
 .food .food-content img 
 {
-    height: 300px;
-    border-bottom-left-radius: 20px;
-    border-top-right-radius: 20px;
+    width: 100%;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
     
-    margin: 20px 0 0 0;
+    margin-top: 30px;
 }
 /* Buy */
-.buy_area 
-{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background: #222
-}
 .buy 
 {
-    width: 50%;
-    height: 285px;
-    padding: 0 0 50px 0;
+    margin: 0 auto;
+    padding: 30px 20px;
     border: 3px solid #444;
-    border-radius: 20px;
+    /* border-radius: 20px; */
+
+    margin: 30px 0;
+    position: relative;
 
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.buy .buy-list 
+{
+    display: flex;
     justify-content: space-evenly;
-    align-items: flex-end;
-
-    margin: 100px 0 0 0;
-
-    position: relative;
+    align-items: center;
 }
 .buy:before 
 {
@@ -304,35 +288,27 @@
 
     color: #F1C40F;
     background: #222;
-
+    padding: 0 10px;
 }
 .buy a 
 {
-    color: #fff;
-    text-decoration: none;
+    color: #ccc;
 
-    background-color: #F1C40F;
-    display: block;
-
-    width: 100px;
-    height: 30px;
-    border-radius: 5px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: absolute;
-    bottom: 10px;
+    margin-top: 30px;
+    transition: 0.5s;
 }
 .buy a:hover
 {
-    background-color: #e4b702;
+    color: #fff;
+}
+.buy a i 
+{
+    margin-left: 5px;
 }
 .buy .card 
 {
     width: 160px;
-    height: 200px;
+    padding: 10px;
     border-radius: 8px;
     background-color: #222;
     margin: 0 20px;
@@ -348,52 +324,61 @@
 
     transition: 0.5s;
 }
+.buy .card button 
+{
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #F1C40F;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 0;
+}
 .buy .card:hover 
 {
     box-shadow: 2px 2px 15px #000;
     border: 3px solid #fff;
+    cursor: pointer;
 }
 .buy .card img 
 {
-    width: 100px;
+    width: 100%;
+    height: 70px;
+    margin-bottom: 10px;
+    object-fit: contain;
 }
 /* Contact */
 .contact 
 {
-
-    /* width: 45%; */
+    /* width: 100%; */
     background: #222;
-    margin: 100px 0 0 0;
     border-radius: 20px;
     border: 3px solid #444;
 
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
 .contact img 
 {
     height: 300px;
     transform: scale(0.95);
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-radius: 20px;
 }
 .contact .contact-area 
 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    height: 300px;
-
+    padding: 20px 20px;
 }
 .contact .contact-area h2 
 {
     color: #F1C40F;
-    margin: 20px 0;
+    margin-bottom: 15px;
 }
 .contact form 
 {
-    width: calc(50% - 250px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -401,8 +386,7 @@
 .contact .contact-area form input[type="email"],input[type="text"]
 {
     width: 230px;
-    height: 45px;
-    padding: 0 20px;
+    padding: 10px 20px;
     border-radius: 5px;
     outline: none;
     border: none;
@@ -411,8 +395,8 @@
 .contact .contact-area form input[type="submit"] 
 {
     width: 100px;
-    height: 40px;
     outline: none;
+    padding: 10px 20px;
     border: none;
     border-radius: 10px;
     background: #d8af0e;
@@ -420,6 +404,11 @@
     color: #fff;
 
     margin: 20px 0 0 0;
+}
+.contact .contact-area form input[type="submit"]:hover 
+{
+    background-color: #F1C40F;
+    cursor: pointer;
 }
 
 
